<resources>
    <string name="app_name">MedicacaoCrianca</string>
    <string name="sing_in">Sing In</string>
    <string name="enter_email">Enter your e-mail</string>
    <string name="enter_password">Enter your password</string>
    <string name="welcome_teacher">Welcome,</string>
    <string name="teacher_home">Home Page</string>
    <string name="room">Room: </string>
    <string name="admin_area">Administrator Area</string>
    <string name="add_children">Add Children</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="add_room">Add Room</string>
    <string name="add_chil_to_room">Assign Children to room</string>
    <string name="fullName">Full name</string>
    <string name="write_email">Email</string>
    <string name="write_password">Password</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="room_number">Room Number</string>
    <string name="address">Address</string>
    <string name="birthDate">BirthDate(ex.: 20/11/2016)</string>
    <string name="parent_name">Responsible parent name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="takePicture">Take picture</string>
    <string name="pickChildren">Select a Children</string>
    <string name="pickRoom">Pick a room</string>
    <string name="alarmSet">\"Alarm set for: \"</string>
    <string name="successAdmin">Successfully logged in as Admin</string>
    <string name="succesLogin">Successfully logged in</string>
    <string name="incorrectData">E-mail or password incorrect!</string>
    <string name="enterName">Enter you name</string>
    <string name="passMatch">Password doesn\'t match</string>
    <string name="passLength">Length must be 6 or more characters</string>
    <string name="createdSucessTeacher">Teacher created successfully</string>
    <string name="addRoomSuccess">Room added successfully!</string>
    <string name="insert_pill_name">Pill/Remedy name</string>
    <string name="select_hours">Select hours</string>
    <string name="select_from_gallery">Gallery</string>
    <string name="select_a_room">Select a room</string>
    <string name="enter_name">Enter a name</string>
    <string name="enter_address">Enter an address</string>
    <string name="enter_birth_date">Enter a birth date</string>
    <string name="enter_responsible_parent">Enter the responsible parent</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="children_add_sucess">Children added sucessfuly</string>
    <string name="edit_or_delete">Edit or delete</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="title_activity_maps">Map</string>
    <string name="call_parent">Call parent</string>
    <string name="add_a_pill_remedy">Add a pill/remedy</string>
    <string name="remove_pill">Remedy/pill removed successfully</string>
    <string name="update_pill">Remedy/pill updated successfully</string>
    <string name="local_db_add_child">Added successfully!</string>


</resources>