<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    tools:context=".activity.AdminHomeActivity">

    <TextView
        android:id="@+id/text_add_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="40dp"
        android:text="@string/add_children"
        android:textSize="36dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/full_name_text_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/fullName"
            android:inputType="text"
            android:paddingBottom="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/address_text_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/address"
            android:inputType="text"
            android:paddingBottom="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/bithdate_text_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/birthDate"
            android:inputType="text"
            android:paddingBottom="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/parent_text_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/parent_name"
            android:inputType="text"
            android:paddingBottom="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/number_text_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/phoneNumber"
            android:inputType="number"
            android:paddingBottom="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layouta"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <Button
            android:id="@+id/picture_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/takePicture">

        </Button>
        <Button
            android:id="@+id/gallery_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/select_from_gallery">

        </Button>
       <ImageView
           android:id="@+id/image_id"
           android:layout_width="100dp"
           android:layout_height="match_parent"
           android:layout_alignParentRight="true"
           android:background="@drawable/rectangle_field">


       </ImageView>
    </RelativeLayout>


   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <Button
           android:id="@+id/back_btn_id"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentStart="true"
           android:layout_marginTop="40dp"
           android:layout_marginStart="30dp"
           android:text="@string/back"/>

       <Button
           android:id="@+id/save_btn_id"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentEnd="true"
           android:layout_marginEnd="30dp"
           android:layout_marginTop="40dp"
           android:text="@string/confirm"
           app:srcCompat="@android:drawable/ic_menu_save" />

   </RelativeLayout>



</LinearLayout>