<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#17A9BC"
    tools:context=".activity.AdminHomeActivity">

    <TextView
        android:id="@+id/text_add_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:textColor="@color/white"
        android:text="@string/add_teacher"
        android:textSize="36dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/teacher_name_text_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            android:hint="@string/fullName"
            android:inputType="text"
            android:paddingBottom="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/teacher_email_text_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            android:hint="@string/write_email"
            android:inputType="textEmailAddress"
            android:paddingBottom="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/teacher_password_text_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            android:hint="@string/write_password"
            android:inputType="textPassword"
            android:paddingBottom="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/teacher_password_confirm_text_id"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textColorHint="#000000"
            android:layout_height="60dp"
            android:hint="@string/write_password"
            android:inputType="textPassword"
            android:paddingBottom="5dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/back_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:text="@string/back"/>

        <Button
            android:id="@+id/save_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/confirm"
            app:srcCompat="@android:drawable/ic_menu_save"/>

    </RelativeLayout>


</LinearLayout>