<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChangeOrDeleteActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/edit_or_delete"
        android:textSize="25dp"
        android:textAlignment="center"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">


        <EditText
            android:id="@+id/pill_id"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="25dp"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <EditText
            android:id="@+id/timer_id"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textSize="25dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/delete_children_id"
        android:layout_width="150dp"
        android:layout_height="50dp"

        android:text="@string/delete">

    </Button>

    <Button
        android:id="@+id/update_children_id"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/update"
        />

</LinearLayout>