<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OpenChildSelectedActivity"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/view_stuff_id"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/image_for_pic"
            android:layout_width="180dp"
            android:layout_height="180dp" />

        <TextView
            android:id="@+id/child_name_id"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/image_for_pic"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="1dp"
            android:textAlignment="center"
            android:textSize="16dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_top_id"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/text_pill_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/insert_pill_name">
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/timer_layout_id"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/text_display_hours_id"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:textSize="15dp">

        </TextView>

        <Button
            android:id="@+id/select_hours_id"
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/select_hours">

        </Button>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:id="@+id/confirm_btn_children_add_pill"
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/confirm"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Relative_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selected_child_recycler_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>


</LinearLayout>